# EdgeNN

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md
.github/: GOOD_FIRST_ISSUES.md  PULL_REQUEST_TEMPLATE.md
.github/DISCUSSION_TEMPLATE/: ideas.yml  q-and-a.yml  show-and-tell.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
cmake/: arm-cortex-m7.cmake
docs/: ARCHITECTURE.md
examples/: CMakeLists.txt  hello_edgenn.c
include/edgenn/: edgenn.h  edgenn_config.h.in
include/edgenn/core/: edgenn_arena.h  edgenn_log.h  edgenn_lut.h  edgenn_math_fp.h  edgenn_math_q.h  edgenn_quant.h  edgenn_status.h  edgenn_tensor.h  edgenn_types.h
include/edgenn/hal/: edgenn_hal.h
include/edgenn/ops/dnn/: edgenn_activation.h  edgenn_batchnorm.h  edgenn_conv2d.h  edgenn_dense.h  edgenn_dwconv2d.h  edgenn_pool.h
include/edgenn/ops/rnn/: edgenn_gru.h  edgenn_lstm.h  edgenn_rnn_cell.h
include/edgenn/ops/transformer/: edgenn_attention.h  edgenn_ffn.h  edgenn_layernorm.h  edgenn_posenc.h
include/edgenn/runtime/: edgenn_graph.h  edgenn_model.h
paper/: main.tex  references.bib
paper/figures/: architecture_stack.tex  arena_pingpong.tex  benchmark_accuracy.tex  benchmark_latency.tex  benchmark_memory.tex  quantization_pipeline.tex
paper/sections/: 01_introduction.tex  02_related_work.tex  03_design_principles.tex  04_architecture.tex  05_operators.tex  06_quantization.tex  07_evaluation.tex  08_partitioning.tex  09_conclusion.tex  appendix.tex
paper/tables/: benchmark_results.tex  hardware_targets.tex  operator_support.tex
src/core/: edgenn_arena.c  edgenn_log.c  edgenn_lut.c  edgenn_math_fp.c  edgenn_math_q.c  edgenn_quant.c  edgenn_tensor.c
src/hal/: edgenn_hal_generic.c
src/ops/dnn/: edgenn_activation.c  edgenn_batchnorm.c  edgenn_conv2d.c  edgenn_dense.c  edgenn_dwconv2d.c  edgenn_pool.c
src/ops/rnn/: edgenn_gru.c  edgenn_lstm.c  edgenn_rnn_cell.c
src/ops/transformer/: edgenn_attention.c  edgenn_ffn.c  edgenn_layernorm.c  edgenn_posenc.c
src/runtime/: edgenn_graph.c  edgenn_model.c
tests/: CMakeLists.txt  edgenn_test.h  test_core.c  test_dnn_ops.c  test_rnn_ops.c  test_runtime.c  test_transformer_ops.c
